gcc/testsuite/g++.old-deja/g++.pt/explicit9.C
// { dg-do assemble  }
// GROUPS passed templates
void foo(int);

void bar()
{
  foo<int>(3); // { dg-error "" } foo is not a template.
}
